--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -202,7 +202,7 @@ write_files:
     content: |
       [Unit]
       Description=DeCloud Relay NAT Configuration Callback
-      After=network-online.target cloud-final.service
+      After=network-online.target
       Wants=network-online.target
       
       [Service]
