--- a/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
@@ -56,98 +56,26 @@ write_files:
   - path: /var/www/index.html
     permissions: '0644'
     content: |
-      <!DOCTYPE html>
-      <html>
-      <head>
-        <title>__VM_NAME__</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <style>
-          * { margin: 0; padding: 0; box-sizing: border-box; }
-          body {
-            font-family: system-ui, sans-serif;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #0f0f23, #1a1a3e);
-            color: #fff;
-          }
-          .card {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 3rem;
-            border-radius: 16px;
-            text-align: center;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            max-width: 500px;
-          }
-          h1 { font-size: 2rem; margin-bottom: 0.5rem; }
-          .name { color: #4ade80; font-family: monospace; }
-          p { color: #94a3b8; margin-top: 0.5rem; }
-          .status {
-            display: inline-block;
-            padding: 0.4rem 1rem;
-            background: rgba(34, 197, 94, 0.2);
-            border: 1px solid rgba(34, 197, 94, 0.3);
-            border-radius: 9999px;
-            margin-top: 1rem;
-            font-size: 0.875rem;
-          }
-          .dot {
-            display: inline-block;
-            width: 8px;
-            height: 8px;
-            background: #22c55e;
-            border-radius: 50%;
-            margin-right: 0.5rem;
-            animation: pulse 2s infinite;
-          }
-          @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.5; }
-          }
-          .note {
-            margin-top: 2rem;
-            padding: 1rem;
-            background: rgba(0, 0, 0, 0.3);
-            border-radius: 8px;
-            font-size: 0.8rem;
-            color: #64748b;
-          }
-          code {
-            background: rgba(0, 0, 0, 0.4);
-            padding: 0.2rem 0.4rem;
-            border-radius: 4px;
-            font-size: 0.75rem;
-            color: #f59e0b;
-          }
-        </style>
-      </head>
-      <body>
-        <div class="card">
-          <h1>Virtual Machine <span class="name">__VM_NAME__</span></h1>
-          <p>Decentralized compute, running on your terms.</p>
-          <div class="status">
-            <span class="dot"></span>Online
-          </div>
-          <div class="note">
-            To remove this page and free port 80:<br>
-            <code>sudo systemctl disable --now welcome</code>
-          </div>
-        </div>
-      </body>
-      </html>
+      __INDEX_HTML__
+
+  - path: /usr/local/bin/welcome-server.py
+    permissions: '0755'
+    content: |
+      __WELCOME_SERVER_PY__
 
   # Welcome page systemd service
   - path: /etc/systemd/system/welcome.service
     permissions: '0644'
     content: |
       [Unit]
-      Description=DeCloud Welcome Page
+      Description=DeCloud Welcome Page with Caching
       After=network.target
       
       [Service]
-      ExecStart=/usr/bin/python3 -m http.server 80 --directory /var/www
+      ExecStart=/usr/local/bin/welcome-server.py
       Restart=always
+      StandardOutput=journal
+      StandardError=journal
       
       [Install]
       WantedBy=multi-user.target
