--- a/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
@@ -74,6 +74,7 @@ write_files:
       [Service]
       ExecStart=/usr/local/bin/welcome-server.py
       Restart=always
+      WorkingDirectory=/var/www
       StandardOutput=journal
       StandardError=journal
       
