--- a/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
+++ b/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="SSH.NET" Version="2025.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Constants\" />
+    <Folder Include="Interfaces\Auth\" />
+  </ItemGroup>
+
 </Project>
