Refactored to implement unified generic proxy endpoints

--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -73,5 +73,64 @@
     "MaxFileSizeMb": 100,
     "MaxFiles": 10,
     "RetentionDays": 90
+  },
+
+  "_comment_ProxySettings": "========== GenericProxyController Configuration ==========",
+  "ProxySettings": {
+    "_comment": "Configuration for GenericProxyController - unified proxy for HTTP/TCP services",
+
+    "AllowedPorts": [
+      22,
+      80,
+      443,
+      3000,
+      3001,
+      3306,
+      5000,
+      5432,
+      6379,
+      8000,
+      8080,
+      8443,
+      9999
+    ],
+
+    "_comment_AllowedPorts": "Whitelist of ports that can be proxied. Add custom ports here as needed.",
+
+    "ProtectedPorts": [ 22, 3306, 5432, 6379 ],
+    "_comment_ProtectedPorts": "Ports that require authentication (future enhancement)",
+
+    "PortTimeouts": {
+      "9999": 150,
+      "22": 30000,
+      "80": 10000,
+      "443": 10000,
+      "3000": 10000,
+      "3001": 10000,
+      "3306": 30000,
+      "5000": 10000,
+      "5432": 30000,
+      "6379": 5000,
+      "8000": 10000,
+      "8080": 10000,
+      "8443": 10000,
+      "0": 30000
+    },
+    "_comment_PortTimeouts": "Timeout in milliseconds per port. Port 0 is the default for unlisted ports.",
+
+    "EnablePortWhitelist": true,
+    "_comment_EnablePortWhitelist": "If true, only AllowedPorts can be proxied. If false, all ports except blocked system ports are allowed.",
+
+    "BlockSystemPorts": true,
+    "_comment_BlockSystemPorts": "If true, blocks common system ports (1-1024) unless explicitly in AllowedPorts",
+
+    "MaxConcurrentTunnelsPerVm": 10,
+    "_comment_MaxConcurrentTunnelsPerVm": "Maximum number of simultaneous TCP tunnels per VM",
+
+    "EnableRateLimiting": false,
+    "_comment_EnableRateLimiting": "Enable rate limiting (future enhancement)",
+
+    "MaxRequestsPerMinutePerVm": 1000,
+    "_comment_MaxRequestsPerMinutePerVm": "Rate limit per VM if enabled"
   }
 }
