--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -1,7 +1,7 @@
 #cloud-config
 # DeCloud Relay VM Cloud-Init Configuration
 # This VM serves as a WireGuard relay for CGNAT nodes
-# Version: 4.0 (Multi-relay support with dynamic subnet allocation)
+# Version: 4.1 (FIXED - Soft service dependencies with Wants instead of Requires)
 
 hostname: __VM_NAME__
 manage_etc_hosts: true
@@ -53,7 +53,7 @@ write_files:
       # DeCloud Orchestrator
       PublicKey = __ORCHESTRATOR_PUBLIC_KEY__
       Endpoint = __ORCHESTRATOR_IP__:__ORCHESTRATOR_PORT__
-      # Orchestrator's peer IP on this relay's subnet (not actually used, but required)
+      # Orchestrator always uses 10.20.0.1, not per-subnet IP
       AllowedIPs = 10.20.0.1/32
       PersistentKeepalive = 25
       
@@ -167,14 +167,14 @@ write_files:
           }
       }
 
-  # Relay management API
+  # Relay management API with Wants instead of Requires
   - path: /etc/systemd/system/decloud-relay-api.service
     permissions: '0644'
     content: |
       [Unit]
       Description=DeCloud Relay Management API
       After=network.target wg-quick@wg-relay-server.service
-      Requires=wg-quick@wg-relay-server.service
+      Wants=wg-quick@wg-relay-server.service
 
       [Service]
       Type=simple
@@ -188,14 +188,14 @@ write_files:
       [Install]
       WantedBy=multi-user.target
 
-  # Relay HTTP proxy service
+  # Relay HTTP proxy with Wants instead of Requires
   - path: /etc/systemd/system/decloud-relay-http-proxy.service
     permissions: '0644'
     content: |
       [Unit]
       Description=DeCloud Relay HTTP Proxy
       After=network.target wg-quick@wg-relay-server.service nginx.service
-      Requires=wg-quick@wg-relay-server.service nginx.service
+      Wants=wg-quick@wg-relay-server.service nginx.service
 
       [Service]
       Type=simple
@@ -224,9 +224,8 @@ write_files:
         "wireguard_endpoint": "__PUBLIC_IP__:51820",
         "wireguard_public_key": "__WIREGUARD_PUBLIC_KEY__",
         "orchestrator_public_key": "__ORCHESTRATOR_PUBLIC_KEY__",
-        "relay_http_proxy": "__RELAY_HTTP_PROXY__",
         "created_at": "__TIMESTAMP__",
-        "version": "4.0"
+        "version": "4.1"
       }
 
 # =====================================================
@@ -250,9 +249,9 @@ runcmd:
   - systemctl enable qemu-guest-agent
   - systemctl start qemu-guest-agent
   
-  # Start WireGuard (orchestrator peer already configured)
+  # Start WireGuard manually first, then enable for boot
   - wg-quick up wg-relay-server
-  - systemctl enable wg-quick@wg-relay-server  # Enable for future reboots
+  - systemctl enable wg-quick@wg-relay-server
 
   # Verify orchestrator peer is configured
   - wg show wg-relay-server | grep -A 5 "__ORCHESTRATOR_PUBLIC_KEY__" || echo "WARNING - Orchestrator peer not found!"
@@ -332,6 +331,13 @@ runcmd:
   - systemctl enable nginx
   - systemctl restart nginx
 
+  # Create relay API and HTTP proxy directories
+  - mkdir -p /opt/decloud-relay/static
+  - mkdir -p /etc/decloud
+
+  # Reload systemd to pick up new service files
+  - systemctl daemon-reload
+
   # Start relay HTTP proxy
   - systemctl enable decloud-relay-http-proxy
   - systemctl start decloud-relay-http-proxy
@@ -343,17 +349,15 @@ runcmd:
   - systemctl is-active decloud-relay-http-proxy || echo "WARNING - HTTP proxy failed to start"
   
   # Start relay management API
-  - systemctl daemon-reload
   - systemctl enable decloud-relay-api
   - systemctl start decloud-relay-api
   
+  # Verify API is running
+  - systemctl is-active decloud-relay-api || echo "WARNING - Relay API failed to start"
+
   # Configure fail2ban for SSH protection
   - systemctl enable fail2ban
   - systemctl start fail2ban
-  
-  # Create directory for relay API
-  - mkdir -p /opt/decloud-relay/static
-  - mkdir -p /etc/decloud
   
   # Log completion
   - 'echo "DeCloud relay VM bootstrap complete at $(date)" >> /var/log/decloud-relay-bootstrap.log'
