Fix: Block SSH on WireGuard interface to prevent interception
The relay VM's SSH server was intercepting port-forwarded SSH connections
meant for CGNAT VMs. Even though iptables DNAT rules correctly forwarded
traffic to tunnel IPs, the relay VM's SSH (listening on 0.0.0.0:22) would
respond before packets reached the WireGuard tunnel.

SOLUTION (iptables-based, no SSH config changes):
- Added INPUT rule to WireGuard PostUp: block SSH on wg-relay-server interface
- iptables -A INPUT -i wg-relay-server -p tcp --dport 22 -j DROP
- Forwarded traffic (FORWARD chain) unaffected
- Management SSH from enp1s0 interface still works

This allows Direct Access SSH to flow correctly:
External → Relay Host:40000 → Relay VM:40000 → DNAT → WireGuard → CGNAT VM:22

--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -44,9 +44,12 @@ write_files:
       PostUp = iptables -A FORWARD -i wg-relay-server -j ACCEPT
       PostUp = iptables -A FORWARD -o wg-relay-server -j ACCEPT
       PostUp = bash -c 'DEFAULT_IFACE=$(ip route | grep default | awk "{print \$5}"); iptables -t nat -A POSTROUTING -o $DEFAULT_IFACE -j MASQUERADE'
+      # Block SSH to relay VM via tunnel (prevents interception of forwarded SSH)
+      PostUp = iptables -A INPUT -i wg-relay-server -p tcp --dport 22 -j DROP
       PreDown = iptables -D FORWARD -i wg-relay-server -j ACCEPT
       PreDown = iptables -D FORWARD -o wg-relay-server -j ACCEPT
       PreDown = bash -c 'DEFAULT_IFACE=$(ip route | grep default | awk "{print \$5}"); iptables -t nat -D POSTROUTING -o $DEFAULT_IFACE -j MASQUERADE'
+      PreDown = iptables -D INPUT -i wg-relay-server -p tcp --dport 22 -j DROP
       
       # Orchestrator peer (pre-configured during provisioning)
       [Peer]
